tests/c_headers/net_ip.nim


## *
##  @brief Return pointer to any (all bits zeros) IPv6 address.
##
##  @return Any IPv6 address.
##

proc net_ipv6_unspecified_address*(): ptr in6_addr {.
    importc: "net_ipv6_unspecified_address", header: "net_ip.h".}
## *
##  @brief Return pointer to any (all bits zeros) IPv4 address.
##
##  @return Any IPv4 address.
##

proc net_ipv4_unspecified_address*(): ptr in_addr {.
    importc: "net_ipv4_unspecified_address", header: "net_ip.h".}
## *
##  @brief Return pointer to broadcast (all bits ones) IPv4 address.
##
##  @return Broadcast IPv4 address.
##

proc net_ipv4_broadcast_address*(): ptr in_addr {.
    importc: "net_ipv4_broadcast_address", header: "net_ip.h".}
discard "forward decl of net_if"
proc net_if_ipv4_addr_mask_cmp*(iface: ptr net_if; `addr`: ptr in_addr): bool {.
    importc: "net_if_ipv4_addr_mask_cmp", header: "net_ip.h".}
## *
##  @brief Check if the given address belongs to same subnet that
##  has been configured for the interface.
##
##  @param iface A valid pointer on an interface
##  @param addr IPv4 address
##
##  @return True if address is in same subnet, false otherwise.
##

proc net_ipv4_addr_mask_cmp*(iface: ptr net_if; `addr`: ptr in_addr): bool =
  return net_if_ipv4_addr_mask_cmp(iface, `addr`)

proc net_if_ipv4_is_addr_bcast*(iface: ptr net_if; `addr`: ptr in_addr): bool {.
    importc: "net_if_ipv4_is_addr_bcast", header: "net_ip.h".}
## *
##  @brief Check if the given IPv4 address is a broadcast address.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr IPv4 address
##
##  @return True if address is a broadcast address, false otherwise.
##

when defined(CONFIG_NET_NATIVE_IPV4):
  proc net_ipv4_is_addr_bcast*(iface: ptr net_if; `addr`: ptr in_addr): bool =
    if net_ipv4_addr_cmp(`addr`, net_ipv4_broadcast_address()):
      return true
    return net_if_ipv4_is_addr_bcast(iface, `addr`)

else:
  proc net_ipv4_is_addr_bcast*(iface: ptr net_if; `addr`: ptr in_addr): bool =
    ARG_UNUSED(iface)
    ARG_UNUSED(`addr`)
    return false

proc net_if_ipv4_addr_lookup*(`addr`: ptr in_addr; iface: ptr ptr net_if): ptr net_if_addr {.
    importc: "net_if_ipv4_addr_lookup", header: "net_ip.h".}
## *
##  @brief Check if the IPv4 address is assigned to any network interface
##  in the system.
##
##  @param addr A valid pointer on an IPv4 address
##
##  @return True if IPv4 address is found in one of the network interfaces,
##  False otherwise.
##

proc net_ipv4_is_my_addr*(`addr`: ptr in_addr): bool =
  var ret: bool
  ret = net_if_ipv4_addr_lookup(`addr`, nil) != nil
  if not ret:
    ret = net_ipv4_is_addr_bcast(nil, `addr`)
  return ret

## *
##   @brief Check if the IPv6 address is unspecified (all bits zero)
##
##   @param addr IPv6 address.
##
##   @return True if the address is unspecified, false otherwise.
##

proc net_ipv6_is_addr_unspecified*(`addr`: ptr in6_addr): bool =
  return UNALIGNED_GET(addr(`addr`.s6_addr32[0])) == 0 and
      UNALIGNED_GET(addr(`addr`.s6_addr32[1])) == 0 and
      UNALIGNED_GET(addr(`addr`.s6_addr32[2])) == 0 and
      UNALIGNED_GET(addr(`addr`.s6_addr32[3])) == 0

## *
##   @brief Check if the IPv6 address is solicited node multicast address
##   FF02:0:0:0:0:1:FFXX:XXXX defined in RFC 3513
##
##   @param addr IPv6 address.
##
##   @return True if the address is solicited node address, false otherwise.
##

proc net_ipv6_is_addr_solicited_node*(`addr`: ptr in6_addr): bool =
  return UNALIGNED_GET(addr(`addr`.s6_addr32[0])) == htonl(0xff020000) and
      UNALIGNED_GET(addr(`addr`.s6_addr32[1])) == 0x00000000 and
      UNALIGNED_GET(addr(`addr`.s6_addr32[2])) == htonl(0x00000001) and
      ((UNALIGNED_GET(addr(`addr`.s6_addr32[3])) and htonl(0xff000000)) ==
      htonl(0xff000000))

## *
##  @brief Check if the IPv6 address is a given scope multicast
##  address (FFyx::).
##
##  @param addr IPv6 address
##  @param scope Scope to check
##
##  @return True if the address is in given scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_scope*(`addr`: ptr in6_addr; scope: cint): bool =
  return (`addr`.s6_addr[0] == 0xff) and (`addr`.s6_addr[1] == scope)

## *
##  @brief Check if the IPv6 addresses have the same multicast scope (FFyx::).
##
##  @param addr_1 IPv6 address 1
##  @param addr_2 IPv6 address 2
##
##  @return True if both addresses have same multicast scope,
##  false otherwise.
##

proc net_ipv6_is_same_mcast_scope*(addr_1: ptr in6_addr; addr_2: ptr in6_addr): bool =
  return (addr_1.s6_addr[0] == 0xff) and (addr_2.s6_addr[0] == 0xff) and
      (addr_1.s6_addr[1] == addr_2.s6_addr[1])

## *
##  @brief Check if the IPv6 address is a global multicast address (FFxE::/16).
##
##  @param addr IPv6 address.
##
##  @return True if the address is global multicast address, false otherwise.
##

proc net_ipv6_is_addr_mcast_global*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_scope(`addr`, 0x0e)

## *
##  @brief Check if the IPv6 address is a interface scope multicast
##  address (FFx1::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a interface scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_iface*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_scope(`addr`, 0x01)

## *
##  @brief Check if the IPv6 address is a link local scope multicast
##  address (FFx2::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a link local scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_link*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_scope(`addr`, 0x02)

## *
##  @brief Check if the IPv6 address is a mesh-local scope multicast
##  address (FFx3::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a mesh-local scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_mesh*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_scope(`addr`, 0x03)

## *
##  @brief Check if the IPv6 address is a site scope multicast
##  address (FFx5::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a site scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_site*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_scope(`addr`, 0x05)

## *
##  @brief Check if the IPv6 address is an organization scope multicast
##  address (FFx8::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is an organization scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_org*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_scope(`addr`, 0x08)

## *
##  @brief Check if the IPv6 address belongs to certain multicast group
##
##  @param addr IPv6 address.
##  @param group Group id IPv6 address, the values must be in network
##  byte order
##
##  @return True if the IPv6 multicast address belongs to given multicast
##  group, false otherwise.
##

proc net_ipv6_is_addr_mcast_group*(`addr`: ptr in6_addr; group: ptr in6_addr): bool =
  return UNALIGNED_GET(addr(`addr`.s6_addr16[1])) == group.s6_addr16[1] and
      UNALIGNED_GET(addr(`addr`.s6_addr16[2])) == group.s6_addr16[2] and
      UNALIGNED_GET(addr(`addr`.s6_addr16[3])) == group.s6_addr16[3] and
      UNALIGNED_GET(addr(`addr`.s6_addr32[1])) == group.s6_addr32[1] and
      UNALIGNED_GET(addr(`addr`.s6_addr32[2])) == group.s6_addr32[1] and
      UNALIGNED_GET(addr(`addr`.s6_addr32[3])) == group.s6_addr32[3]

## *
##  @brief Check if the IPv6 address belongs to the all nodes multicast group
##
##  @param addr IPv6 address
##
##  @return True if the IPv6 multicast address belongs to the all nodes multicast
##  group, false otherwise
##

proc net_ipv6_is_addr_mcast_all_nodes_group*(`addr`: ptr in6_addr): bool =
  let all_nodes_mcast_group: in6_addr
  return net_ipv6_is_addr_mcast_group(`addr`, addr(all_nodes_mcast_group))

## *
##  @brief Check if the IPv6 address is a interface scope all nodes multicast
##  address (FF01::1).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a interface scope all nodes multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_iface_all_nodes*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_iface(`addr`) and
      net_ipv6_is_addr_mcast_all_nodes_group(`addr`)

## *
##  @brief Check if the IPv6 address is a link local scope all nodes multicast
##  address (FF02::1).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a link local scope all nodes multicast
##  address, false otherwise.
##

proc net_ipv6_is_addr_mcast_link_all_nodes*(`addr`: ptr in6_addr): bool =
  return net_ipv6_is_addr_mcast_link(`addr`) and
      net_ipv6_is_addr_mcast_all_nodes_group(`addr`)

## *
##   @brief Create solicited node IPv6 multicast address
##   FF02:0:0:0:0:1:FFXX:XXXX defined in RFC 3513
##
##   @param src IPv6 address.
##   @param dst IPv6 address.
##

proc net_ipv6_addr_create_solicited_node*(src: ptr in6_addr; dst: ptr in6_addr) =
  dst.s6_addr[0] = 0xFF
  dst.s6_addr[1] = 0x02
  UNALIGNED_PUT(0, addr(dst.s6_addr16[1]))
  UNALIGNED_PUT(0, addr(dst.s6_addr16[2]))
  UNALIGNED_PUT(0, addr(dst.s6_addr16[3]))
  UNALIGNED_PUT(0, addr(dst.s6_addr16[4]))
  dst.s6_addr[10] = 0'u
  dst.s6_addr[11] = 0x01
  dst.s6_addr[12] = 0xFF
  dst.s6_addr[13] = src.s6_addr[13]
  UNALIGNED_PUT(UNALIGNED_GET(addr(src.s6_addr16[7])), addr(dst.s6_addr16[7]))

## * @brief Construct an IPv6 address from eight 16-bit words.
##
##   @param addr IPv6 address
##   @param addr0 16-bit word which is part of the address
##   @param addr1 16-bit word which is part of the address
##   @param addr2 16-bit word which is part of the address
##   @param addr3 16-bit word which is part of the address
##   @param addr4 16-bit word which is part of the address
##   @param addr5 16-bit word which is part of the address
##   @param addr6 16-bit word which is part of the address
##   @param addr7 16-bit word which is part of the address
##

proc net_ipv6_addr_create*(`addr`: ptr in6_addr; addr0: uint16; addr1: uint16;
                          addr2: uint16; addr3: uint16; addr4: uint16; addr5: uint16;
                          addr6: uint16; addr7: uint16) =
  UNALIGNED_PUT(htons(addr0), addr(`addr`.s6_addr16[0]))
  UNALIGNED_PUT(htons(addr1), addr(`addr`.s6_addr16[1]))
  UNALIGNED_PUT(htons(addr2), addr(`addr`.s6_addr16[2]))
  UNALIGNED_PUT(htons(addr3), addr(`addr`.s6_addr16[3]))
  UNALIGNED_PUT(htons(addr4), addr(`addr`.s6_addr16[4]))
  UNALIGNED_PUT(htons(addr5), addr(`addr`.s6_addr16[5]))
  UNALIGNED_PUT(htons(addr6), addr(`addr`.s6_addr16[6]))
  UNALIGNED_PUT(htons(addr7), addr(`addr`.s6_addr16[7]))

## *
##   @brief Create link local allnodes multicast IPv6 address
##
##   @param addr IPv6 address
##

proc net_ipv6_addr_create_ll_allnodes_mcast*(`addr`: ptr in6_addr) =
  net_ipv6_addr_create(`addr`, 0xff02, 0, 0, 0, 0, 0, 0, 0x0001)

## *
##   @brief Create link local allrouters multicast IPv6 address
##
##   @param addr IPv6 address
##

proc net_ipv6_addr_create_ll_allrouters_mcast*(`addr`: ptr in6_addr) =
  net_ipv6_addr_create(`addr`, 0xff02, 0, 0, 0, 0, 0, 0, 0x0002)

## *
##   @brief Create IPv6 address interface identifier
##
##   @param addr IPv6 address
##   @param lladdr Link local address
##
